# Shelfino_ROS2

map_pkg/config/: map_config.yaml
path_interface/: CMakeLists.txt  package.xml
path_interface/msg/: Graph.msg  GraphEdge.msg  GraphNode.msg  PathArray.msg
path_interface/srv/: GenerateGraph.srv  MoveRobots.srv
shelfino_followpath/: CMakeLists.txt  package.xml
shelfino_followpath/include/evader/: evader.hpp
shelfino_followpath/include/shelfino_followpath/: Dubins.h  follow_client.hpp  followclient.hpp
shelfino_followpath/src/: Dubins.cpp  Follow_server.cpp  follow_client.cpp  followpath.cpp
shelfino_node/: CMakeLists.txt
shelfino_roadmap/: CMakeLists.txt  package.xml
shelfino_roadmap/include/shelfino_roadmap/: Astar.h  Dubins.h  GEdge.h  GVertex.h  RRTstar.h
shelfino_roadmap/src/: Astar.cpp  GEdge.cpp  GVertex.cpp  RRTstar.cpp  astar_planner.cpp  rrtstar_planner.cpp  send_roadmap.cpp
